fix footer overflow

--- a/internal/web/src/input.css
+++ b/internal/web/src/input.css
@@ -175,3 +175,7 @@ tbody tr td {
 .info ul {
     @apply list-disc list-inside;
 }
+
+.container:last-child {
+    margin-bottom: 2.5rem !important;
+}
